# mlops_projects

./: README.md
.github/workflows/: aws_terraform.yml
aws-terraform/: Makefile  README.md  pyproject.toml
aws-terraform/src/: Untitled-1.ipynb  datagen.py  lambda_git_action.py  lambda_gitaction.py  workflow.py
aws-terraform/terraform/: main.tf
aws-terraform/tests/src/: test_datagen.py
aws_terraform/: Dockerfile  Makefile  README.md  pyproject.toml
aws_terraform/aws_terraform/: datagen.py  inference.py  inference_ec2_version.py  inference_lambda_version.py  lambda_git_action.py  testpost.py  train.py  workflow.py
aws_terraform/terraform/: lambda_trigger.py  main.tf  provider.tf  variable.tf
aws_terraform/tests/: conftest.py
aws_terraform/tests/aws_terraform/: test_datagen.py
nlp-reproduce/: Dockerfile  app.py  data.py  inference.py  model.py  onnx_inference.py  onnx_packaging.py  requirements.txt  requirements_prod.txt  train.py
nlp-reproduce/.dvc/: config
nlp-reproduce/.github/workflows/: docker-ecr.yml
nlp-reproduce/models/: best-checkpoint.ckpt.dvc  model.onnx.dvc
zoomcamp/: pyproject.toml
zoomcamp/experiments/: env.py  mlflow_config.py  pyproject.toml  train.py  workflow.py
