[tool.poetry]
name = "aws-terraform"
version = "0.1.0"
description = ""
authors = ["anyangml"]
readme = "README.md"
packages = [{include = "aws_terraform"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.4.2"
scikit-learn = "^1.3.1"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
