[tool.poetry]
name = "aws_terraform"
version = "0.1.0"
description = ""
authors = ["anyangml"]
readme = "README.md"
packages = [{include = "aws_terraform"}]

[tool.poetry.dependencies]
python = "~3.8"
pydantic = "1.10.0"
scikit-learn = "^1.3.1"
pytest = "^7.4.2"
prefect = "^2.13.5"
boto3 = "^1.28.62"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
