[tool.poetry]
name = "zoomcamp-experiments"
version = "0.1.0"
description = ""
authors = ["anyangml"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mlflow = "^2.4.2"
ipykernel = "^6.24.0"
boto3 = "^1.28.3"
prefect = "^2.10.21"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
